--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang = "en">
 
 <head>
-    <title>The Nine Realms of Norse Mythology</title>
+    <title>The Gods of Norse Mythology</title>
+    <link rel="stylesheet" type="text/css" href="a01.css" />
 </head>
     
 <body>
- 
+ <header>
+    <h1>The Gods of Norse Mythology</h1>
+ </header>
 </body>
 </html>
