--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
     
 <body>
- <header>
-    <h1>The Gods of Norse Mythology</h1>
+ <header class = "title">
+    The Gods of Norse Mythology
  </header>
 </body>
 </html>
