--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
     
 <body>
- <header class = "title">
-    The Gods of Norse Mythology
- </header>
+    <div class = "Header">
+        <h1 class = "title">The Gods of Norse Mythology</h1>
+    </div>
 </body>
 </html>
