--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
     
 <body>
-    <div class = "Header">
+    <div class = "header">
         <h1 class = "title">The Gods of Norse Mythology</h1>
     </div>
+    <p class = "text">
+        Hello
+    </p>
 </body>
 </html>
