--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class = "header">
         <h1 class = "title">The Gods of Norse Mythology</h1>
-
-    <p class = "text">
+    <p id = "text">
         Hello
     </p>
     </div>
