--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class = "header">
         <h1 class = "title">The Gods of Norse Mythology</h1>
     </div>
-    <p id = "text">
+    <p class = "text">
         Hello
     </p>
 </body>
