--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <div class = "header">
         <h1 class = "title">The Gods of Norse Mythology</h1>
     </div>
-    <p class = "text">
-        Hello
-    </p>
+   <div class = "search">
+    <a href="index.html">Home</a>
+    <a href="Thor.html">Thor</a>
+    <a href="Odin.html">Odin</a>
+    <a href="Loki.html">Loki</a>
+    <a href="Heimdall.html">Heimdall</a>
+   </div>
 </body>
 </html>
