--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
     <div class = "header">
         <h1 class = "title">The Gods of Norse Mythology</h1>
     </div>
+
    <div class = "search">
     <a href="index.html">Home</a>
     <a href="Thor.html">Thor</a>
     <a href="Odin.html">Odin</a>
     <a href="Loki.html">Loki</a>
     <a href="Heimdall.html">Heimdall</a>
+   </div>
+   
+   <div class = "body">
+    <div>
+        <p class = "green" id = "medium">
+            One of the most popular pantheons of gods in ancient mythology is the Norse Pantheon.
+        </p>
+    </div>
    </div>
 </body>
 </html>
