--- a/index.html
+++ b/index.html
@@ -16,14 +16,29 @@
     <a href="Thor.html">Thor</a>
     <a href="Odin.html">Odin</a>
     <a href="Loki.html">Loki</a>
-    <a href="Heimdall.html">Heimdall</a>
+    <a href="Njord.html">Njord</a>
    </div>
    
    <div class = "body">
     <div>
-        <p class = "green" id = "medium">
+        <p class = "green" id = "small">
             One of the most popular pantheons of gods in ancient mythology is the Norse Pantheon.
+            The Norse people had many gods, goddesses, and spirits that controlled many of the aspects of our world. The beginnings of the world according to Norse mythology state that the world started out as two worlds that stood on two sides of the abyss known as Ginnungagap: the land of ice Niflheim, and the land of fire Muspelheim. The combination of these two worlds created water droplets that gave birth the giant Ymir. Other entities were created through these water droplets, who would eventually kill Ymir and use his body to create the Universe as we know it today. In Norse Mythology there were two main kinds of gods: The Aesir led by Odin who ruled over the realm of Asgard, and the Vanir led by Njord who ruled over the realm of Vanaheim.
         </p>
+        <p class = "green" id = "small">
+            The universe in Norse mythology consists of the world tree Yggdrasil, which contains nine realms:
+        </p>
+        <ul>
+            <li>Midgard, the realm of humans</li>
+            <li>Asgard, the realm of the Aesir</li>
+            <li>Vanaheim, the realm of the Vanir</li>
+            <li>Niflheim, the realm of the ice giants</li>
+            <li>Muspelheim, the realm of the fire giants</li>
+            <li>Alfheim, the realm of the light elves</li>
+            <li>Svartalfheim, the realm of the dark elves</li>
+            <li>Nidavellir, the realm of the dwarves</li>
+            <li>Jotunheim, the realm of the giants</li>
+        </ul>
     </div>
    </div>
 </body>
