--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class = "green" id = "small">
             The universe in Norse mythology consists of the world tree Yggdrasil, which contains nine realms:
         </p>
-        <ul>
+        <ul class = "red">
             <li>Midgard, the realm of humans</li>
             <li>Asgard, the realm of the Aesir</li>
             <li>Vanaheim, the realm of the Vanir</li>
