--- a/index.html
+++ b/index.html
@@ -29,16 +29,60 @@
             The universe in Norse mythology consists of the world tree Yggdrasil, which contains nine realms:
         </p>
         <ul class = "red">
-            <li>Midgard, the realm of humans</li>
-            <li>Asgard, the realm of the Aesir</li>
-            <li>Vanaheim, the realm of the Vanir</li>
-            <li>Niflheim, the realm of the ice giants</li>
-            <li>Muspelheim, the realm of the fire giants</li>
-            <li>Alfheim, the realm of the light elves</li>
-            <li>Svartalfheim, the realm of the dark elves</li>
-            <li>Nidavellir, the realm of the dwarves</li>
-            <li>Jotunheim, the realm of the giants</li>
+            <li>Midgard</li>
+            <li>Asgard</li>
+            <li>Vanaheim</li>
+            <li>Niflheim</li>
+            <li>Muspelheim</li>
+            <li>Alfheim</li>
+            <li>Svartalfheim</li>
+            <li>Nidavellir</li>
+            <li>Jotunheim</li>
         </ul>
+
+        <table>
+        <tr>
+            <th class="realm">Realm</th> <th class="inhabitant">Inhabitants</th>
+        </tr>
+        <tr>
+            <th class="realm">Midgard</th> <th class="inhabitant">Humans</th>
+        </tr>
+        <tr>
+            <th class="realm">Asgard</th> <th class="inhabitant">Aesir</th>
+        </tr>
+        <tr>
+            <th class="realm">Vanaheim</th> <th class="inhabitant">Vanir</th>
+        </tr>
+        <tr>
+            <th class="realm">Niflheim</th> <th class="inhabitant">Ice Giants</th>
+        </tr>
+        <tr>
+            <th class="realm">Muspelheim</th> <th class="inhabitant">Fire Giants</th>
+        </tr>
+        <tr>
+            <th class="realm">Alfheim</th> <th class="inhabitant">Light Elves</th>
+        </tr>
+        <tr>
+            <th class="realm">Svartalfheim</th> <th class="inhabitant">Dark Elves</th>
+        </tr>
+        <tr>
+            <th class="realm">Nidavellir</th> <th class="inhabitant">Dwarves</th>
+        </tr>
+        <tr>
+            <th class="realm">Jotunheim</th> <th class="inhabitant">Giants</th>
+        </tr>   
+        </table>
+
+        <p class = "red" id = "small">
+            Which god would you like to learn more about?
+        </p>
+        <select name = "moption" size = "1">
+            <option>Odin</option>
+            <option>Thor</option>
+            <option>Loki</option>
+            <option>Njord</option>
+        </select>
+
     </div>
    </div>
 </body>
