--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <a href="Loki.html">Loki</a>
     <a href="Njord.html">Njord</a>
    </div>
+
+   <div>
+    <img src = "World Tree.jpg" alt = "Yggdrasil">
+   </div>
    
    <div class = "body">
     <div>
