--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p class = "green" id = "small">
             The universe in Norse mythology consists of the world tree Yggdrasil, which contains nine realms:
         </p>
+
         <ul class = "red">
             <li>Midgard</li>
             <li>Asgard</li>
@@ -49,31 +50,31 @@
             <th class="realm">Realm</th> <th class="inhabitant">Inhabitants</th>
         </tr>
         <tr>
-            <th class="realm">Midgard</th> <th class="inhabitant">Humans</th>
+            <td class="realm">Midgard</td> <td class="inhabitant">Humans</td>
         </tr>
         <tr>
-            <th class="realm">Asgard</th> <th class="inhabitant">Aesir</th>
+            <td class="realm">Asgard</td> <td class="inhabitant">Aesir</td>
         </tr>
         <tr>
-            <th class="realm">Vanaheim</th> <th class="inhabitant">Vanir</th>
+            <td class="realm">Vanaheim</th> <th class="inhabitant">Vanir</td>
         </tr>
         <tr>
-            <th class="realm">Niflheim</th> <th class="inhabitant">Ice Giants</th>
+            <td class="realm">Niflheim</th> <th class="inhabitant">Ice Giants</td>
         </tr>
         <tr>
-            <th class="realm">Muspelheim</th> <th class="inhabitant">Fire Giants</th>
+            <td class="realm">Muspelheim</th> <th class="inhabitant">Fire Giants</td>
         </tr>
         <tr>
-            <th class="realm">Alfheim</th> <th class="inhabitant">Light Elves</th>
+            <td class="realm">Alfheim</th> <th class="inhabitant">Light Elves</td>
         </tr>
         <tr>
-            <th class="realm">Svartalfheim</th> <th class="inhabitant">Dark Elves</th>
+            <td class="realm">Svartalfheim</th> <th class="inhabitant">Dark Elves</td>
         </tr>
         <tr>
-            <th class="realm">Nidavellir</th> <th class="inhabitant">Dwarves</th>
+            <td class="realm">Nidavellir</th> <th class="inhabitant">Dwarves</td>
         </tr>
         <tr>
-            <th class="realm">Jotunheim</th> <th class="inhabitant">Giants</th>
+            <td class="realm">Jotunheim</th> <th class="inhabitant">Giants</td>
         </tr>   
         </table>
 
