--- a/Loki.html
+++ b/Loki.html
@@ -16,5 +16,18 @@
             <a href="Loki.html">Loki</a>
             <a href="Njord.html">Njord</a>
         </div>
+
+        <div>
+            <img src = "Loki.jpg" alt = "Yggdrasil">
+        </div>
+
+        <div class = "body">
+            <div>
+                <p class = "purple" id = "small">
+                    
+                </p>
+            </div>
+        </div>
+
     </body>
 </html>
