--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    </div>
 
    <div>
-    <img src = "World Tree.jpg" alt = "Yggdrasil">
+    <img src="World Tree.jpg" alt="Yggdrasil">
    </div>
    
    <div class = "body">
@@ -56,29 +56,30 @@
             <td class="realm">Asgard</td> <td class="inhabitant">Aesir</td>
         </tr>
         <tr>
-            <td class="realm">Vanaheim</th> <th class="inhabitant">Vanir</td>
+            <td class="realm">Vanaheim</td> <td class="inhabitant">Vanir</td>
         </tr>
         <tr>
-            <td class="realm">Niflheim</th> <th class="inhabitant">Ice Giants</td>
+            <td class="realm">Niflheim</td> <td class="inhabitant">Ice Giants</td>
         </tr>
         <tr>
-            <td class="realm">Muspelheim</th> <th class="inhabitant">Fire Giants</td>
+            <td class="realm">Muspelheim</td> <td class="inhabitant">Fire Giants</td>
         </tr>
         <tr>
-            <td class="realm">Alfheim</th> <th class="inhabitant">Light Elves</td>
+            <td class="realm">Alfheim</td> <td class="inhabitant">Light Elves</td>
         </tr>
         <tr>
-            <td class="realm">Svartalfheim</th> <th class="inhabitant">Dark Elves</td>
+            <td class="realm">Svartalfheim</td> <td class="inhabitant">Dark Elves</td>
         </tr>
         <tr>
-            <td class="realm">Nidavellir</th> <th class="inhabitant">Dwarves</td>
+            <td class="realm">Nidavellir</td> <td class="inhabitant">Dwarves</td>
         </tr>
         <tr>
-            <td class="realm">Jotunheim</th> <th class="inhabitant">Giants</td>
+            <td class="realm">Jotunheim</td> <td class="inhabitant">Giants</td>
         </tr>   
         </table>
 
         <p class = "red" id = "small">
+            Click on one of the links above to learn more about some of the main gods in Norse mythology.
             Which god would you like to learn more about?
         </p>
         <select name = "moption" size = "1">
