--- a/Loki.html
+++ b/Loki.html
@@ -18,13 +18,18 @@
         </div>
 
         <div>
-            <img src = "Loki.jpg" alt = "Yggdrasil">
+            <img src = "Loki.jpg" alt = "Loki">
         </div>
 
         <div class = "body">
             <div>
                 <p class = "purple" id = "small">
-                    
+                    Loki is a shapeshifting trickster god who is known for using his cunning to cause all sorts of schemes against the gods.
+                    Loki's father was the giant Farbauti, and his mother was Laufey.  Despite the fact he was born from a giant, he was still included among the Aesir.
+                    One of the most well-known schemes of Loki was his involvement in the death of the god Baldr.  Baldr was blessed so that he would be immune to all harm, with the exception of mistletoe.
+                    Knowing this, Loki tricked the blind god Hod into hurling mistletoe at Baldr while the gods amused themselves by throwing objects at him.
+                    This ended up killing Baldr and as punishment Loki was chained and bound to a rock as punishment.  Loki had many nefarious children, including the world serpent Jormungand, the wold Fenrir, and Hel, the goddess of death.
+                    During Ragnarok, the prophesized end of the gods, Loki breaks free from his bonds and leads an army of giants against the Aesir.  Loki meets his end while fighting Heimdall, the guardian god of Asgard, who slays him with his sword.     
                 </p>
             </div>
         </div>
