--- a/Njord.html
+++ b/Njord.html
@@ -18,13 +18,15 @@
         </div>
 
         <div>
-            <img src = "Njord.jpg" alt = "Yggdrasil">
+            <img src = "Njord.jpg" alt = "Njord">
         </div>
 
         <div class = "body">
             <div>
                 <p class = "purple" id = "small">
-                    
+                    Njord is the god of the sea and wind as well as the chief god of the Vanir.  He was married to the giantess Skadi who gave birth to Freyr, god of fertility, and Freyja, goddess of love and beauty.
+                    During the war between the Aesir and the Vanir, Njord was captured and taken hostage by the Aesir.  Eventually, Njord and his children joined the Aesir, and the bonds he created with them created peace between the two groups of gods.
+                    Njord's home in Asgard is called Noatun, meaning the place of boats, and it is here that he can control the winds and sea.
                 </p>
             </div>
         </div>
