--- a/Odin.html
+++ b/Odin.html
@@ -18,13 +18,18 @@
         </div>
 
         <div>
-            <img src = "Odin.jpg" alt = "Yggdrasil">
+            <img src = "Odin.jpg" alt = "Odin">
         </div>
 
         <div class = "body">
             <div>
                 <p class = "purple" id = "small">
-                    
+                    Odin is one of the most important gods in Norse mythology, being the ruler of the Aesir and the god of war and death.
+                    He is the ruler of the hall of Valhalla, where half of the warriors who die in battle go.
+                    The reason he only has one eye is because he gave up his eye to Mimir so he could drink from the well of wisdom.
+                    Odin is married to Frigg, goddess of marriage and prophecy, and has many children, including Thor, Tyr, and Baldr.
+                    Odin is also usually seen with two ravens named Huginn and Muninn, meaning thought and memory.
+                    It is prophesized that during Ragnarok, the end of the world in Norse Mythology, that Odin will die fighting the giant wolf Fenrir, who swallows Odin whole, but is avenged by his son Vidarr who kills Fenrir. 
                 </p>
             </div>
         </div>
