--- a/Thor.html
+++ b/Thor.html
@@ -18,13 +18,16 @@
         </div>
 
         <div>
-            <img src = "Thor.jpg" alt = "Yggdrasil">
+            <img src = "Thor.jpg" alt = "Thor">
         </div>
 
         <div class = "body">
             <div>
                 <p class = "purple" id = "small">
-                    
+                    Thor is the god of thunder and agriculture and the son of Odin and Jord, the personification of the Earth.  He is well known for his strength and protecting humanity against the giants.
+                    Thor uses a powerful hammer named Mjolnir to fight against giants and other monsters, he also has a magic belt called Megingjord which increases his strength.
+                    He is married to Sif, goddess of fertility, and together they had two children, Thrud and Modi.  During Ragnarok, the prophesized end of the world in Norse mythology, Thor will die fighting his
+                    mortal enemy, the world serpent Jormungandr, but his sons Thrud and Magni are prophesized to survive after the events of Ragnarok.
                 </p>
             </div>
         </div>
